--- a/Module 5/challenges/easy.html
+++ b/Module 5/challenges/easy.html
@@ -5,5 +5,20 @@
     </head>
     <body> 
         <h1>Employee data</h1>
+        <table border="1">
+        </body>
+            <thead>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Salary</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Ylleza</td>
+                    <td>Berisha</td>
+                    <td>100</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
