--- a/Module 6/Book example/Block-inline- elements.html
+++ b/Module 6/Book example/Block-inline- elements.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="lule.webp"
     <title>Inline Block Elements</title>
     <style>
         div{
@@ -19,6 +20,11 @@
     <video controls autoplay types="" width="600">
         <source src="video.jpeg"></scoure>
     </video>
-
+    <iframe></iframe>
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/RM14EIYnzJQ"
+     title="I hate skeeball, but I am going to beat EVERY ARCADE GAME" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
 </body>
 </html>
