New input types

--- a/Module 7/Boook-examples/form.html
+++ b/Module 7/Boook-examples/form.html
@@ -14,16 +14,15 @@
         <br>
         <input type="password" name="password"/>
         <br>
-
+<br>
         <form d="login_form">
             <label for="Gender">Gender</label> 
-            <br>
             <br>
             <input type="radio" name="Gender" value="male">
             <label for="Gender">male</label>
             <input  type="radio" name="Gender" value="female">
             <label for="Gender">female</label>
-            <br>
+            <br> <br>
             <label for="Hobbies">Hobbies</label><br>
             <input type="checkbox" name="Hobbies" value="football"/>
             <label for="Hobbies">football</label>
@@ -40,7 +39,24 @@
             <br>
             <label for="Message">Message</label>
             <br>
-            <textarea rows="10" cols="50"></textarea>
+            <textarea rows="10" cols="50"></textarea><br><br>
+            <label for="number">number</label>          
+            <input type="number" readonly value="0"/><br><br>
+            <input type="number" placeholder="number"/><br>
+            <input type="number" disabled/>
+            <input type="number" maxlength="20"/>
+            <br><br>
+            <label for="date">data</label>
+            <input type="date"/><br> <br>
+            <label for="rage">rage</label>
+            <input type="range"/><br> <br>
+            <label for="imge">imge</label>
+            <input type="imge"/><br> <br>
+            <label for="file">file</label>
+            <input type="file"/><br> <br>
+            <label for="search">search</label>
+            <input type="search"/>
+
 
 
             <br>
