--- a/Module 11/Book-examples/CSS.html
+++ b/Module 11/Book-examples/CSS.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>tittle</title>
     <link rel="stylesheet" href="external.css">
     
 </head>
 <body>
    
-    <p class="slider-paragraph">Test</p>
+    <p class="slider-paragraph">Yllëza Berisha</p>
+    <p class="border-solid">Border</p>
+
 </body>
 </html>
