--- a/Module 12/Book examples/text-style.html
+++ b/Module 12/Book examples/text-style.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <title>title</title>
     <link rel="stylesheet" href="Text-style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
     <h2 class="text-style">Text style text style text style text style Text style text style 
         text style text styleText style text style text style text styleText style text style text style text style</h2>
+        <i class="material-icons">favorite</i>
+        <i class="material-icons">shield moon</i>
+        <i class="material-icons">block</i>
     
 </body>
 </html>
