--- a/Module 15/book examples/elementposition.html
+++ b/Module 15/book examples/elementposition.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" href="elementposition.css">
 </head>
 <body>
-    <div class="static">
-        this div is static  </div>
+    <div class="static"> this div is static  </div
+    <div class="relative"> this div is relative </div
+    <div class="absolute"> this div is absolute </div
+    <div class="sticky"> this div is sticky </div
+    <div class="fixed"> this div is fixed </div
+
+<div class="relative">
+    <div class="absolute"></div>
+</div>
 </body>
 </html>
