--- a/Module 15/book examples/navigation.html
+++ b/Module 15/book examples/navigation.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8" />
     <title>Yllëza</title>
+    <link rel="stylesheet" href="navigation.css">
 </head>
 <body>
     <ul>
-        <li> <a href="home">home</a> </li>
-        <li> <a href="home"></a> </li>
-        <li> <a href="home"></a> </li>
-        <li> <a href="home"></a> </li>
-        <li> <a href="home"></a> </li>
+        <li> <a href="#Home" class="active">Home</a> </li>
+        <li> <a href="#News">News</a> </li>
+        <li> <a href="#Contact">Contact</a> </li>
+        <li> <a href="#About">About</a> </li>
+        
     </ul>
     
 </body>
